--- a/package.json
+++ b/package.json
@@ -8,6 +8,8 @@
   "dependencies": {
     "express": "^4.18.2",
     "cors": "^2.8.5",
-    "axios": "^1.6.0"
+    "axios": "^1.6.0",
+    "better-sqlite3": "^9.4.0"
+
   }
 }
